--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- SEO Meta Tags -->
-    <meta name="description" content="BloxHub the best free script on the market!!">
+    <meta name="description" content="DexHub is a mediocre Script Hub">
     <meta name="author" content="ItzDrWaffleZ#9999">
 
     <!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ ETC -->
-	<meta property="og:site_name" content="BloxHub" /> <!-- website name -->
+	<meta property="og:site_name" content="DexHub" /> <!-- website name -->
 	<meta property="og:site" content="https://bloxhub.xyz/index.html" /> <!-- website link -->
-	<meta property="og:title" content="BloxHub"/> <!-- title shown in the actual shared post -->
+	<meta property="og:title" content="DexHub"/> <!-- title shown in the actual shared post -->
 	<meta property="og:description" content="The best free script hub!" /> <!-- description shown in the actual shared post -->
 	<meta property="og:image" content="https://bloxhub.xyz/images/BloxHub.png" /> <!-- image link, make sure it's jpg --> <!-- where do you want your post to link to -->
 	<meta property="og:type" content="article" />
 
     <!-- Website Title -->
-    <title>BloxHub</title>
+    <title>DexHub</title>
 
     <!-- Styles -->
     <link href="css/glitch.css" rel="stylesheet" type="text/css">
@@ -44,59 +44,6 @@
             <div class="bounce3"></div>
         </div>
     </div> --!>
-    
-
-
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-md navbar-dark navbar-custom fixed-top">
-        <!-- Text Logo - Use this if you don't have a graphic logo -->
-        <!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Aria</a> -->
-
-        <!-- Image Logo -->
-        <a class="navbar-brand logo-image" href="index.html"><img src="images/BloxHub.png" width="30" height="50"></a><h2>BloxHub</h2>
-
-        <!-- Mobile Menu Toggle Button -->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-awesome fas fa-bars"></span>
-            <span class="navbar-toggler-awesome fas fa-times"></span>
-        </button>
-        <!-- end of mobile menu toggle button -->
-
-        <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#"><span class="sr-only"></span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#"></a>
-                </li>
-                <li class="nav-item">
-			<a class="nav-link page-scroll" href="#"></a>
-                </li>
-
-                <!-- Dropdown Menu -->
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle page-scroll" href="#" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false"></a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#"><span class="item-text"></span></a>
-                        <div class="dropdown-items-divide-hr"></div>
-                        <a class="dropdown-item" href=""><span class="item-text"></span></a>
-                        <a class="dropdown-item" href="script/loader.lua">Script</a>
-                        <span>
-                        <a class="dropdown-item" href="https://discord.gg/gKNU5cezMn">Discord</span></a>
-                    </div>
-                </li>
-                <!-- end of dropdown menu -->
-
-                <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#"></a>
-                </li>
-            </ul>
-            </span>
-        </div>
-    </nav> <!-- end of navbar -->
-    <!-- end of navbar -->
-
 
     <!-- Header -->
     <header id="header" class="header">
@@ -197,7 +144,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <p class="p-small"></a>BloxHub - Created By Bloxi#1618</p>
+                    <p class="p-small"></a>DexHub - Created By Dex#8822</p>
                     <p class="p-small">Website - Created By ItzDrWaffle.exe#9999 </p>
                 </div>
             </div>
