--- a/index.html
+++ b/index.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- SEO Meta Tags -->
     <meta name="description" content="DexHub is a mediocre Script Hub">
-    <meta name="author" content="ItzDrWaffleZ#9999">
+    <meta name="author" content="ItzDrWaffle.exe#9999">
 
     <!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ ETC -->
 	<meta property="og:site_name" content="DexHub" /> <!-- website name -->
-	<meta property="og:site" content="https://bloxhub.xyz/index.html" /> <!-- website link -->
+	<meta property="og:site" content="https://dexhub.xyz/index.html" /> <!-- website link -->
 	<meta property="og:title" content="DexHub"/> <!-- title shown in the actual shared post -->
 	<meta property="og:description" content="The best free script hub!" /> <!-- description shown in the actual shared post -->
-	<meta property="og:image" content="https://bloxhub.xyz/images/BloxHub.png" /> <!-- image link, make sure it's jpg --> <!-- where do you want your post to link to -->
+	<meta property="og:image" content="https://dexhub.xyz/images/DexHub.png" /> <!-- image link, make sure it's jpg --> <!-- where do you want your post to link to -->
 	<meta property="og:type" content="article" />
 
     <!-- Website Title -->
@@ -32,7 +30,7 @@
 	<link href="css/styles.css" rel="stylesheet">
 
 	<!-- Favicon  -->
-    <link rel="icon" href="images/BloxHub.png">
+    <link rel="icon" href="images/DexHub.png">
 </head>
 <body data-spy="scroll" data-target=".fixed-top">
 
