--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                             
                             <li>
                                 <a class="btn_smaller" href="loader.lua">Main Script</a>
-                                <a class="btn_smaller" href="download">Download</a>
+                                <a class="btn_smaller" href="download.html">Download</a>
                             </li>
                             <li>
                             <!--    <a class="white" href="privacy-policy.html">Privacy Policy</a> -->
