--- a/download.html
+++ b/download.html
@@ -1,4 +1,8 @@
-<img src="images/loading.gif">
-
-
-<h1>"test"</h1>
+<!DOCTYPE html>
+<html>
+  <title>DexHub</title>
+  <img src="images/loading.gif" class="center">
+  
+  <meta http-equiv="refresh" 
+      content="5; url = https://ide.geeksforgeeks.org" />
+<head>
