--- a/download.html
+++ b/download.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
+  
+<head>
   <title>DexHub</title>
   <img src="images/loading.gif" class="center">
   
   <meta http-equiv="refresh" 
       content="5; url = https://ide.geeksforgeeks.org" />
-<head>
+</head>
+</html>
