--- a/download.html
+++ b/download.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html>
+
+<style>
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+</style>
   
 <head>
   <title>DexHub</title>
