--- a/download.html
+++ b/download.html
@@ -2,10 +2,11 @@
 <html>
 
 <style>
-img {
+.center {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  width: 50%;
 }
 </style>
   
