--- a/download.html
+++ b/download.html
@@ -8,6 +8,10 @@
   margin-right: auto;
   width: 50%;
 }
+  
+body {
+  background-color: black;
+}
 </style>
   
 <head>
@@ -15,6 +19,6 @@
   <img src="images/loading.gif" class="center">
   
   <meta http-equiv="refresh" 
-      content="5; url = https://ide.geeksforgeeks.org" />
+      content="2.5; url = https://dexhub.xyz" />
 </head>
 </html>
