--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
                         <ul class="list-unstyled li-space-lg white">
                             
                             <li>
-				<a href="scripts/DexHub.lua" download>
- 				  <a class="btn_smaller"Download</a>
+				<a href="dexhub.xyz/scripts/DexHub.lua" download>
+ 				  <a class="btn_smaller" "Download"</a>
 				</a>
                                 <a class="btn_smaller" href="loader.lua">Main Script</a>
                                 <a class="btn_smaller" href="download.html">Download</a>
