--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         <ul class="list-unstyled li-space-lg white">
                             
                             <li>
-				<a href="dexhub.xyz/scripts/DexHub.lua" download>
+				<a href="dexhub.xyz/scripts/dexhub.lua" download>
  				  <a class="btn_smaller" "Download"</a>
 				</a>
                                 <a class="btn_smaller" href="loader.lua">Main Script</a>
