--- a/index.html
+++ b/index.html
@@ -98,11 +98,8 @@
                         <ul class="list-unstyled li-space-lg white">
                             
                             <li>
-				<a href="dexhub.xyz/scripts/dexhub.lua" download>
- 				  <a class="btn_smaller" "Download"</a>
-				</a>
                                 <a class="btn_smaller" href="loader.lua">Main Script</a>
-                                <a class="btn_smaller" href="download.html">Download</a>
+                                <a class="btn_smaller" href="https://cdn.discordapp.com/attachments/861447264349061162/899840182386298950/dexhub.lua">Download</a>
                             </li>
                             <li>
                             <!--    <a class="white" href="privacy-policy.html">Privacy Policy</a> -->
