--- a/404.html
+++ b/404.html
@@ -16,5 +16,21 @@
 </head>
 <body data-spy="scroll" data-target=".fixed-top">
 
-<h1 class="glitch" data-text="404" style="text-align: center; color: #f1f1f1; font-size: 48px; font-weight: 600;">404</h1>
-<p class="p-heading p-large">We can't find what your looking for...</p>
+<header id="header" class="header">
+        <div id="particles-js"></div>
+        <script src="js/particles.js"></script>
+        <canvas class="particles-js-canvas-el" style="width: 100%; height: 100%;" width="1680" height="686"></canvas>
+        <div class="header-content">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="text-container">
+                            <h1 class="glitch" data-text="404" style="text-align: center; color: #f1f1f1; font-size: 48px; font-weight: 600;">404</h1>
+                            <p class="p-heading p-large">We can't find what your looking for...</p>
+
+                        
+                    </div> <!-- end of col -->
+                </div> <!-- end of row -->
+            </div> <!-- end of container -->
+        </div> <!-- end of header-content -->
+    </div></header>
