--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <meta name="author" content="ItzDrWaffle.exe#9999">
 
     <!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ ETC -->
-	<meta property="og:site_name" content="DexHub" /> <!-- website name -->
+	<meta property="og:site_name" content="DexHub | The Next-Gen Roblox Script Hub" /> <!-- website name -->
 	<meta property="og:site" content="https://dexhub.xyz/index.html" /> <!-- website link -->
 	<meta property="og:title" content="DexHub"/> <!-- title shown in the actual shared post -->
-	<meta property="og:description" content="The coolest mediocre Script Hub!" /> <!-- description shown in the actual shared post -->
-	<meta property="og:image" content="https://dexhub.xyz/images/DexHub.png" /> <!-- image link, make sure it's jpg --> <!-- where do you want your post to link to -->
+	<meta property="og:description" content="DexHub on Top! Best Script Hub!" /> <!-- description shown in the actual shared post -->
+	<meta property="og:image" content="https://dexhub.xyz/images/DexHub.gif" /> <!-- image link, make sure it's jpg --> <!-- where do you want your post to link to -->
 	<meta property="og:type" content="article" />
 
     <!-- Website Title -->
