--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<meta property="og:site" content="https://dexhub.xyz/index.html" /> <!-- website link -->
 	<meta property="og:title" content="DexHub"/> <!-- title shown in the actual shared post -->
 	<meta property="og:description" content="DexHub on Top! Best Script Hub!" /> <!-- description shown in the actual shared post -->
-	<meta property="og:image" content="https://dexhub.xyz/images/DexHub.gif" /> <!-- image link, make sure it's jpg --> <!-- where do you want your post to link to -->
+	<meta property="og:image" content="https://dexhub.xyz/images/DexHubRecolor.gif" /> <!-- image link, make sure it's jpg --> <!-- where do you want your post to link to -->
 	<meta property="og:type" content="article" />
 
     <!-- Website Title -->
