--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="author" content="ItzDrWaffle.exe#9999">
 
     <!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ ETC -->
+	<meta property="og:theme-color" content="#220af7" />
 	<meta property="og:site_name" content="DexHub | The Next-Gen Roblox Script Hub" /> <!-- website name -->
 	<meta property="og:site" content="https://dexhub.xyz/index.html" /> <!-- website link -->
 	<meta property="og:title" content="DexHub"/> <!-- title shown in the actual shared post -->
