--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <p class="p-small">DexHub - Created By Dex#8822</p>
-                    <p class="p-small">Website - Created By ItzDrWaffle.exe#9999 </p>
+                    <p class="p-small">Website - Created By Onii-Chan#8799 </p>
                 </div>
             </div>
         </div>
