--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
 
         <!-- ===== CSS ===== -->
-        <link rel="stylesheet" href="/css/styles.css">
+        <link rel="stylesheet" href="css/styles.css">
 
         <title>DexHub</title>
     </head>
@@ -64,6 +64,6 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
 
         <!--===== MAIN JS =====-->
-        <script src="/js/main.js"></script>
+        <script src="js/main.js"></script>
     </body>
 </html>
