--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <header class="l-header">
             <nav class="nav bd-grid">
                 <div>
-                    <a href="#" class="nav__logo">Coffee</a>
+                    <a href="#" class="nav__logo">DexHub</a>
                 </div>
                 
                 <div class="nav__toggle" id="nav-toggle">
@@ -29,10 +29,8 @@
                     </div>
 
                     <ul class="nav__list">
-                        <li class="nav__item"><a href="#home" class="nav__link active">Home</a></li>
-                        <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
-                        <li class="nav__item"><a href="#skills" class="nav__link">Blog</a></li>
-                        <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
+                        <li class="nav__item"><a href="/loader.lua" target="_blank" class="nav__link">Script</a></li>
+                        <li class="nav__item"><a href="https://discord.io/dexhub" target="_blank" class="nav__link">Discord</a></li>
                     </ul>
                 </div>
             </nav>
@@ -52,9 +50,9 @@
                     </div>
 
                     <div class="home__data">
-                        <h1 class="home__title">Coffee<br> Drink 3D</h1>
-                        <p class="home__description">Let's help discover the best coffee drink <br> of the week.</p>
-                        <a href="#" class="home__button">Get Started</a>
+                        <h1 class="home__title">DexHub</h1>
+                        <p class="home__description">Exploiting Made Simple</p>
+                        <a href="https://cdn.discordapp.com/attachments/861447264349061162/899840182386298950/dexhub.lua" class="home__button">Download</a>
                     </div>
                 </div>
             </section>
