--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     </div>
 
                     <ul class="nav__list">
-                        <li class="nav__item"><a href="/loader.lua" target="_blank" class="nav__link">Script</a></li>
+                        <li class="nav__item"><a href="https://cdn.discordapp.com/attachments/861447264349061162/899840182386298950/dexhub.lua" target="_blank" class="nav__link">Download</a></li>
                         <li class="nav__item"><a href="https://discord.io/dexhub" target="_blank" class="nav__link">Discord</a></li>
                     </ul>
                 </div>
@@ -51,8 +51,8 @@
 
                     <div class="home__data">
                         <h1 class="home__title">DexHub</h1>
-                        <p class="home__description">Exploiting Made Simple</p>
-                        <a href="https://cdn.discordapp.com/attachments/861447264349061162/899840182386298950/dexhub.lua" class="home__button">Download</a>
+                        <p class="home__description">Scripts With No Strings Attatched</p>
+                        <a href="/loader.lua" target="_blank" class="home__button">Script</a>
                     </div>
                 </div>
             </section>
