--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
                     <div class="home__data">
                         <h1 class="home__title">DexHub</h1>
-                        <p class="home__description">Scripts With No Strings Attatched</p>
+                        <p id="lowerPar" class="home__description">Scripts With No Strings Attatched</p>
                         <a href="/loader.lua" target="_blank" class="home__button">Script</a>
                     </div>
                 </div>
@@ -63,5 +63,11 @@
 
         <!--===== MAIN JS =====-->
         <script src="js/main.js"></script>
+        
+        <script>
+            var strings = ["s","blue","green","yellow"];
+            var randLower = strings[Math.floor(Math.random() * strings.length)];
+            document.getElementById("lowerPar").innerHTML = randLower;
+        </script>
     </body>
 </html>
