--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <div class="home__data">
                         <h1 class="home__title">DexHub</h1>
                         <p id="lowerPar" class="home__description">Scripts With No Strings Attatched</p>
-                        <a href="/loader.lua" target="_blank" class="home__button">Script</a>
+                        <a href="/loader.lua" target="_blank" class="home__button">Get Script</a>
                     </div>
                 </div>
             </section>
