--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <script src="js/main.js"></script>
         
         <script>
-            var strings = ["Exploiting With No Strings Attached","Exploiting Made Simple","The Next-Gen Exploiting Experience","No Keys. No Premium. Just Good Scripts."];
+            var strings = ["Exploiting With No Strings Attached.","Exploiting Made Simple.","The Next-Gen Exploiting Experience.","No Keys. No Premium. Just Good Scripts.","Exploiting with Ease.","Great Scripts, Free, Forever.","We Code, So You Don't Have to.","Forever Better Than V3RM's Search Bar."];
             var randLower = strings[Math.floor(Math.random() * strings.length)];
             document.getElementById("lowerPar").innerHTML = randLower;
         </script>
