--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="css/styles.css">
 
         <title>DexHub</title>
+        <link rel="icon" type="image/x-icon" href="/images/coffee.png">
     </head>
     <body>
         <!--===== HEADER =====-->
