--- a/404.html
+++ b/404.html
@@ -17,19 +17,19 @@
         <header class="header">
             <nav class="nav container">
                 <a href="#" class="nav__logo">
-                    DexHub
+                    V2
                 </a>
 
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
                         <li class="nav__item">
-                            <a href="/index.html" class="nav__link">Home</a>
+                            <a href="./index" class="nav__link">Home</a>
                         </li>
                         <li class="nav__item">
-                            <a href="/loader.lua" class="nav__link">Script</a>
+                            <a href="./games" class="nav__link">Games</a>
                         </li>
                         <li class="nav__item">
-                            <a href="https://discord.io/dexhub" class="nav__link">Discord</a>
+                            <a href="#" class="nav__link">Discord</a>
                         </li>
                     </ul>
 
@@ -68,9 +68,9 @@
                 </div>
 
                 <footer class="home__footer">
-                    <span>DexHub</span>
+                    <span>dexx</span>
                     <span>|</span>
-                    <span>dex@dexhub.xyz</span>
+                    <span>lattedex@gmail.com</span>
                 </footer>
             </section>
         </main>
