--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <header class="l-header">
             <nav class="nav bd-grid">
                 <div>
-                    <a href="#" class="nav__logo">DexHub</a>
+                    <a href="#" class="nav__logo">V2</a>
                 </div>
                 
                 <div class="nav__toggle" id="nav-toggle">
@@ -30,8 +30,8 @@
                     </div>
 
                     <ul class="nav__list">
-                        <li class="nav__item"><a href="https://cdn.discordapp.com/attachments/861447264349061162/899840182386298950/dexhub.lua" target="_blank" class="nav__link">Download</a></li>
-                        <li class="nav__item"><a href="https://discord.io/dexhub" target="_blank" class="nav__link">Discord</a></li>
+                        <li class="nav__item"><a href="./games" target="_blank" class="nav__link">Games</a></li>
+                        <li class="nav__item"><a href="#" target="_blank" class="nav__link">Discord</a></li>
                     </ul>
                 </div>
             </nav>
@@ -51,9 +51,9 @@
                     </div>
 
                     <div class="home__data">
-                        <h1 class="home__title">DexHub</h1>
-                        <p id="lowerPar" class="home__description">Bottom Text</p>
-                        <a href="/loader.lua" target="_blank" class="home__button">Get Script</a>
+                        <h1 class="home__title">dexx</h1>
+                        <p id="lowerPar" class="home__description">Welcome to V2!</p>
+                        <a href="./games" target="_blank" class="home__button">Play Now</a>
                     </div>
                 </div>
             </section>
@@ -66,9 +66,9 @@
         <script src="js/main.js"></script>
         
         <script>
-            var strings = ["Exploiting With No Strings Attached.","Exploiting Made Simple.","The Next-Gen Exploiting Experience.","No Keys. No Premium. Just Good Scripts.","Exploiting with Ease.","Great Scripts, Free, Forever.","We Code, So You Don't Have to.","Forever Better Than V3RM's Search Bar."];
-            var randLower = strings[Math.floor(Math.random() * strings.length)];
-            document.getElementById("lowerPar").innerHTML = randLower;
+            //var strings = ["Exploiting With No Strings Attached.","Exploiting Made Simple.","The Next-Gen Exploiting Experience.","No Keys. No Premium. Just Good Scripts.","Exploiting with Ease.","Great Scripts, Free, Forever.","We Code, So You Don't Have to.","Forever Better Than V3RM's Search Bar."];
+            //var randLower = strings[Math.floor(Math.random() * strings.length)];
+            //document.getElementById("lowerPar").innerHTML = randLower;
         </script>
     </body>
 </html>
