--- a/games.html
+++ b/games.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!--========== CSS ==========-->
-        <link rel="stylesheet" href="./assets/css/gstyles.css">
+        <link rel="stylesheet" href="./css/gstyles.css">
 
         <title>Responsive Card Neon Glass</title>
 
