--- a/games.html
+++ b/games.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!--========== CSS ==========-->
-        <link rel="stylesheet" href="./css/gstyles.css">
+        <link rel="stylesheet" href="assets/css/styles.css">
 
         <title>Responsive Card Neon Glass</title>
 
@@ -32,8 +32,11 @@
           </script>
     </head>
     <body>
-        <input type="text" id="searchInput" onkeyup="filterCards()" placeholder="Search...">
-
+        <center>
+        <a class="game_title">Games</a>
+        <br>
+        <input type="text" id="searchInput" class="search" onkeyup="filterCards()" placeholder="Search...">
+        </center>
         <section class="neon bd-container">
             <div class="neon__container">
                 <div class="neon__card">
