--- a/games.html
+++ b/games.html
@@ -204,7 +204,7 @@
 body {
     
 
-    background-color: black;
+    background-color: #FCA4A6;
       
     background: linear-gradient(270deg, #2c0038, #000000);
     background-size: 400% 400%;
