--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
 
         <!-- ===== CSS ===== -->
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="./css/styles.css">
 
         <title>DexHub</title>
         <link rel="icon" type="image/x-icon" href="./images/coffee.png">
