--- a/games.html
+++ b/games.html
@@ -53,9 +53,17 @@
         <div class="container">
             <img src="./images/games/" alt="" />
 
-            <p class="title"; style="font-family: Kanit; color: red;" >Armed Forces</p>
+            <p class="title"; style="font-family: Kanit; color: red;" >1v1.lol</p>
             <div class="overlay"></div>
-            <div class="button"; style="font-family: Kanit"><a href="/games/armedforces.html"> PLAY </a></div>
+            <div class="button"; style="font-family: Kanit"><a href="/games/1v1lol.html"> PLAY </a></div>
+          </div>
+        
+         <div class="container">
+            <img src="./images/games/" alt="" />
+
+            <p class="title"; style="font-family: Kanit; color: red;" >1V1.LOL</p>
+            <div class="overlay"></div>
+            <div class="button"; style="font-family: Kanit"><a href="/games/1v1lol.html"> PLAY </a></div>
           </div>
 
 
