--- a/games.html
+++ b/games.html
@@ -53,7 +53,7 @@
         <div class="container">
             <img src="./images/games/1v1lol.jpeg" alt="" />
 
-            <p class="title"; style="font-family: Kanit; color: red;" >1v1.lol</p>
+            <p class="title"; style="font-family: Kanit;" >1v1.lol</p>
             <div class="overlay"></div>
             <div class="button"; style="font-family: Kanit"><a href="/games/1v1lol.html"> PLAY </a></div>
           </div>
@@ -61,7 +61,7 @@
          <div class="container">
             <img src="./images/games/" alt="" />
 
-            <p class="title"; style="font-family: Kanit; color: red;" >1V1.LOL</p>
+            <p class="title"; style="font-family: Kanit;" >1V1.LOL</p>
             <div class="overlay"></div>
             <div class="button"; style="font-family: Kanit"><a href="/games/1v1lol.html"> PLAY </a></div>
           </div>
