--- a/games.html
+++ b/games.html
@@ -51,7 +51,7 @@
         </center>
 
         <div class="container">
-            <img src="./images/games/1v1lol.jpeg" alt="" />
+            <img src="./images/games/1v1lol.png" alt="" />
 
             <p class="title"; style="font-family: Kanit;" >1v1.lol</p>
             <div class="overlay"></div>
