--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <!-- ===== CSS ===== -->
         <link rel="stylesheet" href="./css/styles.css">
 
-        <title>DexHub</title>
+        <title>dexx</title>
         <link rel="icon" type="image/x-icon" href="./images/coffee.png">
     </head>
     <body>
@@ -53,7 +53,7 @@
                     <div class="home__data">
                         <h1 class="home__title">dexx</h1>
                         <p id="lowerPar" class="home__description">Welcome to V2!</p>
-                        <a href="./games" target="_blank" class="home__button">Play Now</a>
+                        <a href="./games" class="home__button">Play Now</a>
                     </div>
                 </div>
             </section>
