--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     </div>
 
                     <ul class="nav__list">
-                        <li class="nav__item"><a href="./games" target="_blank" class="nav__link">Games</a></li>
+                        <li class="nav__item"><a href="./games" class="nav__link">Games</a></li>
                         <li class="nav__item"><a href="#" target="_blank" class="nav__link">Discord</a></li>
                     </ul>
                 </div>
