--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
                     <ul class="nav__list">
                         <li class="nav__item"><a href="./games" class="nav__link">Games</a></li>
-                        <li class="nav__item"><a href="#" target="_blank" class="nav__link">Discord</a></li>
+                        <li class="nav__item"><a href="./discord" target="_blank" class="nav__link">Discord</a></li>
                     </ul>
                 </div>
             </nav>
