--- a/games.html
+++ b/games.html
@@ -249,7 +249,7 @@
           </div>
         
          <div class="container">
-            <img src="./images/games/ctrh.jpg" alt="" />
+            <img src="./images/games/ctrh.png" alt="" />
 
             <p class="title"; style="font-family: Kanit;" >Cut The Rope Holiday</p>
             <div class="overlay"></div>
