--- a/games.html
+++ b/games.html
@@ -264,6 +264,14 @@
             <div class="button"; style="font-family: Kanit"><a href="./games/ctrtt.html"> PLAY </a></div>
           </div>
         
+         <div class="container">
+            <img src="./images/games/dealornodeal.png" alt="" />
+
+            <p class="title"; style="font-family: Kanit;" >Deal Or No Deal</p>
+            <div class="overlay"></div>
+            <div class="button"; style="font-family: Kanit"><a href="./games/dealornodeal.html"> PLAY </a></div>
+          </div>
+        
            <h1 style="text-align: center;">Information:</h1>
           <br><br><br><br><br><br><br>
            <hj style="text-align: center;">All games displayed on this website are credit to their respective creators</hj>
