--- a/games.html
+++ b/games.html
@@ -35,8 +35,8 @@
                     </div>
 
                     <ul class="nav__list">
-                        <li class="nav__item"><a href="./index" target="_blank" class="nav__link">Home</a></li>
-                        <li class="nav__item"><a href="#" target="_blank" class="nav__link">Discord</a></li>
+                        <li class="nav__item"><a href="./index" class="nav__link">Home</a></li>
+                        <li class="nav__item"><a href="./discord" target="_blank" class="nav__link">Discord</a></li>
                     </ul>
                 </div>
             </nav>
